--- a/Etupirka/Dialog/ProcessDialog.xaml
+++ b/Etupirka/Dialog/ProcessDialog.xaml
@@ -4,7 +4,7 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:Util="clr-namespace:Wpf.Util"
         WindowStartupLocation="CenterOwner"
-        Title="ゲーム情報リスト" Height="400" Width="600"
+        Title="Game information list" Height="400" Width="600"
         WindowTitleBrush="#FF252525"
         GlowBrush="{DynamicResource AccentColorBrush}"
         Deactivated="MetroWindow_Deactivated"
@@ -23,9 +23,9 @@
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="PID" Width="70" DisplayMemberBinding="{Binding ProcPid}" Util:GridViewSort.PropertyName="ProcPid"></GridViewColumn>
-                    <GridViewColumn Header="イメージ名" Width="140" DisplayMemberBinding="{Binding ProcName}" Util:GridViewSort.PropertyName="ProcName"></GridViewColumn>
-                    <GridViewColumn Header="タイトル" Width="140" DisplayMemberBinding="{Binding ProcTitle}" Util:GridViewSort.PropertyName="ProcTitle"></GridViewColumn>
-                    <GridViewColumn Header="パス" Width="230" DisplayMemberBinding="{Binding ProcPath}" Util:GridViewSort.PropertyName="ProcPath"></GridViewColumn>
+                    <GridViewColumn Header="Name" Width="140" DisplayMemberBinding="{Binding ProcName}" Util:GridViewSort.PropertyName="ProcName"></GridViewColumn>
+                    <GridViewColumn Header="Title" Width="140" DisplayMemberBinding="{Binding ProcTitle}" Util:GridViewSort.PropertyName="ProcTitle"></GridViewColumn>
+                    <GridViewColumn Header="Path" Width="230" DisplayMemberBinding="{Binding ProcPath}" Util:GridViewSort.PropertyName="ProcPath"></GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
