--- a/Etupirka/Dialog/TimeSettingDialog.xaml
+++ b/Etupirka/Dialog/TimeSettingDialog.xaml
@@ -7,7 +7,7 @@
         xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         xmlns:Dameer="clr-namespace:Loya.Dameer;assembly=Loya.Dameer" x:Class="Etupirka.Dialog.TimeSettingDialog"
         WindowStartupLocation="CenterOwner"
-        Title="プレイタイム設定" Height="210" Width="300"
+        Title="Play Time Setting" Height="210" Width="300"
         WindowTitleBrush="#FF252525"
         GlowBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1.5"
@@ -27,22 +27,22 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" >最初プレイ</Label>
+            <Label Grid.Row="0" Grid.Column="0" >First Played</Label>
             <!-- <WindowsFormsHost Grid.Row="0" Grid.Column="1">
                 <wf:DateTimePicker></wf:DateTimePicker>
             </WindowsFormsHost>-->
 
             <!-- <Da-->
             <Dameer:Dameer BorderThickness="0" Grid.Row="0" Grid.Column="1" ShowCheckBox="False" ShowDropDown="False" Format="Custom" CustomFormat="yyyy/MM/dd HH:mm:ss" Value="{Binding FirstPlayTime}"/>
-            <Label Grid.Row="1" Grid.Column="0" >最終プレイ</Label>
+            <Label Grid.Row="1" Grid.Column="0" >Last Played</Label>
             <Dameer:Dameer BorderThickness="0" Grid.Row="1" Grid.Column="1" ShowCheckBox="False" ShowDropDown="False" Format="Custom" CustomFormat="yyyy/MM/dd HH:mm:ss" Value="{Binding LastPlayTime}"/>
-            <Label Grid.Row="2" Grid.Column="0" >プレイタイム</Label>
+            <Label Grid.Row="2" Grid.Column="0" >Play Time</Label>
             <Ctrl:TimeControl x:Name="tc" Margin="0,0,4,0"  HorizontalAlignment="Right" Grid.Row="2" Grid.Column="1"  Value="{Binding TotalPlayTime,Mode=TwoWay}" />
 
         </Grid>
         <WrapPanel Grid.Row="1" HorizontalAlignment="Right" >
             <Button IsDefault="True" Name="btnDialogOk" Click="btnDialogOk_Click"  MinWidth="60" Margin="0,0,10,0">Ok</Button>
-            <Button IsCancel="True" MinWidth="60">キャンセル</Button>
+            <Button IsCancel="True" MinWidth="60">Cancel</Button>
         </WrapPanel>
     </Grid>
 </Controls:MetroWindow>
