--- a/Etupirka/MainWindow.xaml
+++ b/Etupirka/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         xmlns:Util="clr-namespace:Wpf.Util"
         xmlns:tb="http://www.hardcodet.net/taskbar" 
-        Title="Etupirka" Height="415" Width="757"
+        Title="Etupirka" Height="415" Width="900"
         xmlns:local="clr-namespace:Etupirka"
         WindowTitleBrush="#FF252525"
         Deactivated="MetroWindow_Deactivated"
@@ -45,44 +45,44 @@
         <tb:TaskbarIcon x:Name="tbico" IconSource="/Resources/Etupirka.ico" >
             <tb:TaskbarIcon.ContextMenu>
                 <ContextMenu BorderThickness="0" FontSize="11">
-                    <MenuItem Header="プロセス監視" InputGestureText="Alt+F9" Name="WatchP"  IsCheckable="True" IsChecked="{Binding WatchProc,UpdateSourceTrigger=PropertyChanged}"/>
-                    <MenuItem Header="リストを隠す" InputGestureText="Alt+F8" Name="ErogeHelperMode" IsCheckable="True" IsChecked="{Binding ErogeHelper,UpdateSourceTrigger=PropertyChanged}"/>
-                    <MenuItem Header="元に戻す" Name="ShowApp"  Click="ShowApp_Click"/>
-                    <MenuItem Header="設定メーニュ" Name="SettingM" Click="SettingButton_Click" />
-                    <MenuItem Header="終了"  Click="QuitApp_Click"/>
+                    <MenuItem Header="Process Monitor" InputGestureText="Alt+F9" Name="WatchP"  IsCheckable="True" IsChecked="{Binding WatchProc,UpdateSourceTrigger=PropertyChanged}"/>
+                    <MenuItem Header="Hide List" InputGestureText="Alt+F8" Name="ErogeHelperMode" IsCheckable="True" IsChecked="{Binding ErogeHelper,UpdateSourceTrigger=PropertyChanged}"/>
+                    <MenuItem Header="Restore" Name="ShowApp"  Click="ShowApp_Click"/>
+                    <MenuItem Header="Settings" Name="SettingM" Click="SettingButton_Click" />
+                    <MenuItem Header="Quit"  Click="QuitApp_Click"/>
                 </ContextMenu>
             </tb:TaskbarIcon.ContextMenu>
 
         </tb:TaskbarIcon>
         <Menu Name="MenuBar" FontSize="11"  Grid.Row="0" IsMainMenu="True">
-            <MenuItem   Header="ファイル" >
-                <MenuItem Header="プロセスから追加"  Name="AddGameFromProcess" Click="AddGameFromProcess_Click"/>
-                <MenuItem Header="ErogameScapeIDから追加" Click="AddGameFromESID_Click"/>
+            <MenuItem   Header="File" >
+                <MenuItem Header="Add from Process"  Name="AddGameFromProcess" Click="AddGameFromProcess_Click"/>
+                <MenuItem Header="Add from ErogameScapeID" Click="AddGameFromESID_Click"/>
                 <Separator />
-                <MenuItem Header="インポート">
-                    <MenuItem Header="ゲーム情報" Name="ImportList" Click="ImportList_Click"/>
-                    <MenuItem Header="ゲーム情報(上書き)" Name="ImportList_Overwrite" Click="ImportList_Overwrite_Click"/>
-                    <MenuItem Header="プレイタイム情報" Name="ImportPlayTimeList"  Click="ImportPlayTimeList_Click"/>
-                    <MenuItem Header="プレイタイム情報(上書き)" Name="ImportPlayTimeList_Overwrite"  Click="ImportPlayTimeList_Overwrite_Click"/>
+                <MenuItem Header="Import">
+                    <MenuItem Header="Import List" Name="ImportList" Click="ImportList_Click"/>
+                    <MenuItem Header="Import List(Overwrite)" Name="ImportList_Overwrite" Click="ImportList_Overwrite_Click"/>
+                    <MenuItem Header="Import Play Time List" Name="ImportPlayTimeList"  Click="ImportPlayTimeList_Click"/>
+                    <MenuItem Header="Import Play Time List(Overwrite)" Name="ImportPlayTimeList_Overwrite"  Click="ImportPlayTimeList_Overwrite_Click"/>
                 </MenuItem>
                 <!--<MenuItem Header="ErogeTimerからインポート" Name="ImportFromErogeTimer" Click="ImportFromErogeTimer_Click"/>-->
-                <MenuItem Header="エクスポート">
-                    <MenuItem Header="すべてのゲーム" Name="ExportList" Click="ExportList_Click"/>
-                    <MenuItem Header="選択したゲーム" Name="ExportSelect" Click="ExportSelect_Click"/>
+                <MenuItem Header="Export">
+                    <MenuItem Header="Export List" Name="ExportList" Click="ExportList_Click"/>
+                    <MenuItem Header="Export Selected Game" Name="ExportSelect" Click="ExportSelect_Click"/>
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="終了" Name="QuitApp" Click="QuitApp_Click"/>
+                <MenuItem Header="Quit" Name="QuitApp" Click="QuitApp_Click"/>
        
             </MenuItem>
-            <MenuItem   Header="ツール" >
-                <MenuItem Header="プロセス監視"  InputGestureText="Alt+F9" Name="WatchP_Tool"  IsCheckable="True" IsChecked="{Binding WatchProc,ElementName=MWindow,UpdateSourceTrigger=PropertyChanged}"/>
-                <MenuItem Header="プレイタイム統計" Name="PlayTimeStatistic" Click="PlayTimeStatistic_Click"/>
-                <MenuItem Header="オフラインデータベースを更新" Name="UpdateOfflineDatabase" Click="UpdateOfflineDatabase_Click"/>
-                <MenuItem Header="設定" Name="SettingMenu" Click="SettingButton_Click"/>
+            <MenuItem   Header="Tools" >
+                <MenuItem Header="Process Monitor"  InputGestureText="Alt+F9" Name="WatchP_Tool"  IsCheckable="True" IsChecked="{Binding WatchProc,ElementName=MWindow,UpdateSourceTrigger=PropertyChanged}"/>
+                <MenuItem Header="Playtime Statistics" Name="PlayTimeStatistic" Click="PlayTimeStatistic_Click"/>
+                <MenuItem Header="Update Offline Database" Name="UpdateOfflineDatabase" Click="UpdateOfflineDatabase_Click"/>
+                <MenuItem Header="Settings" Name="SettingMenu" Click="SettingButton_Click"/>
             </MenuItem>
-            <MenuItem   Header="ヘルプ" >
-                <MenuItem Header="更新をチェック" Name="CheckUpdate" Click="CheckUpdate_Click"/>
-                <MenuItem Header="バージョン情報" Name="VersionInfo" Click="VersionInfo_Click"/>
+            <MenuItem   Header="Help" >
+                <MenuItem Header="Check for Updates" Name="CheckUpdate" Click="CheckUpdate_Click"/>
+                <MenuItem Header="Version Info" Name="VersionInfo" Click="VersionInfo_Click"/>
             </MenuItem>
         </Menu>
         <ListView Grid.Row="1"  BorderThickness="0" Name="GameListView" FontSize="11" IsSynchronizedWithCurrentItem="True" Util:GridViewSort.AutoSort="True" MouseDoubleClick="GameListView_MouseDoubleClick" KeyDown="GameListView_KeyDown" >
@@ -98,42 +98,42 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="ゲーム" Width="225" Util:GridViewSort.PropertyName="Title">
+                    <GridViewColumn Header="Game" Width="225" Util:GridViewSort.PropertyName="Title">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Foreground="{Binding Path=IsPathExist,Converter={StaticResource pathStyleConverter}}" Text="{Binding Title}"></TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="ブランド" Width="95" Util:GridViewSort.PropertyName="Brand">
+                    <GridViewColumn Header="Brand" Width="95" Util:GridViewSort.PropertyName="Brand">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Foreground="{Binding Path=IsPathExist,Converter={StaticResource pathStyleConverter}}" Text="{Binding Brand}"></TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="発売日" Width="80"  Util:GridViewSort.PropertyName="SaleDay">
+                    <GridViewColumn Header="Release Date" Width="80"  Util:GridViewSort.PropertyName="SaleDay">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Foreground="{Binding Path=IsPathExist,Converter={StaticResource pathStyleConverter}}" Text="{Binding SaleDayString}"></TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="プレイタイム" Width="80"  Util:GridViewSort.PropertyName="TotalPlayTime">
+                    <GridViewColumn Header="Total Play Time" Width="80"  Util:GridViewSort.PropertyName="TotalPlayTime">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Foreground="{Binding Path=IsPathExist,Converter={StaticResource pathStyleConverter}}" Text="{Binding TotalPlayTimeString}"></TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="最初プレイ" Width="115" Util:GridViewSort.PropertyName="FirstPlayTime">
+                    <GridViewColumn Header="First Play Time" Width="115" Util:GridViewSort.PropertyName="FirstPlayTime">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Foreground="{Binding Path=IsPathExist,Converter={StaticResource pathStyleConverter}}" Text="{Binding FirstPlayTimeString}"></TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="最終プレイ" Width="115" Util:GridViewSort.PropertyName="LastPlayTime">
+                    <GridViewColumn Header="Last Play Time" Width="115" Util:GridViewSort.PropertyName="LastPlayTime">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Foreground="{Binding Path=IsPathExist,Converter={StaticResource pathStyleConverter}}" Text="{Binding LastPlayTimeString}"></TextBlock>
@@ -145,21 +145,21 @@
             </ListView.View>
             <ListView.ContextMenu>
                 <ContextMenu FontSize="10">
-                    <MenuItem Header="ゲーム起動"  Name="OpenGame" Click="OpenGame_Click"/>
-                    <MenuItem Header="ゲーム情報を取得" Name="TryGetGameInfo" Click="TryGetGameInfo_Click" />
-                    <MenuItem Header="開く">
-                        <MenuItem Header="フォルダーを開く"  Name="OpenFolder" Click="OpenFolder_Click"/>
-                        <MenuItem Header="ErogameScapeを開く" Name="OpenES" Click="OpenES_Click" />
-                        <MenuItem Header="プレイ統計を開く" Name="OpenPlayStatistics" Click="OpenPlayStatistics_Click" />
+                    <MenuItem Header="Open Game"  Name="OpenGame" Click="OpenGame_Click"/>
+                    <MenuItem Header="Get Game Info" Name="TryGetGameInfo" Click="TryGetGameInfo_Click" />
+                    <MenuItem Header="Open">
+                        <MenuItem Header="Open Folder"  Name="OpenFolder" Click="OpenFolder_Click"/>
+                        <MenuItem Header="Open in ErogameScape" Name="OpenES" Click="OpenES_Click" />
+                        <MenuItem Header="Open Playtime Statistics" Name="OpenPlayStatistics" Click="OpenPlayStatistics_Click" />
                     </MenuItem>
-                    <MenuItem Header="コビー">
-                        <MenuItem Header="タイトル"  Name="CopyTitle" Click="CopyTitle_Click" />
-                        <MenuItem Header="ブランド"  Name="CopyBrand" Click="CopyBrand_Click" />
+                    <MenuItem Header="Copy">
+                        <MenuItem Header="Copy Title"  Name="CopyTitle" Click="CopyTitle_Click" />
+                        <MenuItem Header="Copy Brand"  Name="CopyBrand" Click="CopyBrand_Click" />
                     </MenuItem>
-                    <MenuItem Header="削除" Name="Delete" Click="Delete_Click" />
-                    <MenuItem Header="設定">
-                        <MenuItem Header="プレイタイム設定" Name="TimeSetting" Click="TimeSetting_Click"/>
-                        <MenuItem Header="ゲーム設定" Name="GameProperty" Click="GameProperty_Click"/>
+                    <MenuItem Header="Delete" Name="Delete" Click="Delete_Click" />
+                    <MenuItem Header="Configurations">
+                        <MenuItem Header="Playtime Settings" Name="TimeSetting" Click="TimeSetting_Click"/>
+                        <MenuItem Header="Game Properties" Name="GameProperty" Click="GameProperty_Click"/>
                     </MenuItem>
                 </ContextMenu>
             </ListView.ContextMenu>
@@ -171,9 +171,9 @@
             </StatusBarItem>
             <StatusBarItem HorizontalAlignment="Right">
                 <WrapPanel>
-                <Label FontWeight="Bold" Content="トータルプレイタイム: " />
+                <Label FontWeight="Bold" Content="Total Play Time: " />
                 <Label  FontWeight="Bold"  Content="{Binding TotalTime,ElementName=MWindow,UpdateSourceTrigger=PropertyChanged}"/>
-                <Label FontWeight="Bold" Content="プレイ数: " />
+                <Label FontWeight="Bold" Content="Play count: " />
                 <Label  FontWeight="Bold" Content="{Binding ItemCount,ElementName=MWindow,UpdateSourceTrigger=PropertyChanged}"/>
                 </WrapPanel>
             </StatusBarItem>
