--- a/Etupirka/Views/PlayTimeMonth.xaml
+++ b/Etupirka/Views/PlayTimeMonth.xaml
@@ -19,8 +19,8 @@
             DisplayMemberBinding="{Binding RelativeSource=
              {RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}, 
               Converter={StaticResource IndexConverter}}" />
-                    <GridViewColumn Header="月付" Width="100" DisplayMemberBinding="{Binding MonthString}" Util:GridViewSort.PropertyName="d"></GridViewColumn>
-                    <GridViewColumn Header="プレイタイム" Width="120" DisplayMemberBinding="{Binding TimeString}" Util:GridViewSort.PropertyName="time"></GridViewColumn>
+                    <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding MonthString}" Util:GridViewSort.PropertyName="d"></GridViewColumn>
+                    <GridViewColumn Header="Play Time" Width="120" DisplayMemberBinding="{Binding TimeString}" Util:GridViewSort.PropertyName="time"></GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
